k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: registry.digitalocean.com/movierec/node-app:latest
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
      imagePullSecrets:
        - name: registry-digitaloceanregistry
